/*
 * SonarQube
 * Copyright (C) 2009-2023 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */

import { renderWithContext } from '../../helpers/testUtils';
import { FCProps } from '../../types/misc';
import { Highlighter } from '../Highlighter';

it('renders correctly', () => {
  expect(setupWithProps().container).toMatchSnapshot();
});

it('should handle multiple lines of code', () => {
  expect(
    setupWithProps({
      code: `foo: bar
              pleh: help
              stuff:
               foo: bar
               bar: foo`,
      language: 'yaml',
    }).container
  ).toMatchSnapshot();
});

it('should display edit functions', () => {
  expect(
    setupWithProps({ code: 'One line command', toggleEdit: jest.fn() }).container
  ).toMatchSnapshot();
});

function setupWithProps(props: Partial<FCProps<typeof Highlighter>> = {}) {
  return renderWithContext(<Highlighter code="foo\nbar" {...props} />);
}
