// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-x: auto;
  padding: 1.5rem;
}

.emotion-0 code {
  color: rgb(51,53,60);
  background: rgb(252,252,253);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 400;
}

.emotion-0 code.hljs {
  padding: unset;
}

.emotion-0 .hljs-variable,
.emotion-0 .hljs-meta {
  color: rgb(51,53,60);
}

.emotion-0 .hljs-doctag,
.emotion-0 .hljs-title,
.emotion-0 .hljs-title.class_,
.emotion-0 .hljs-title.function_ {
  color: rgb(34,84,192);
}

.emotion-0 .hljs-comment {
  color: rgb(109,111,119);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-style: italic;
}

.emotion-0 .hljs-tag,
.emotion-0 .hljs-type,
.emotion-0 .hljs-keyword {
  color: rgb(152,29,150);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 700;
}

.emotion-0 .hljs-literal,
.emotion-0 .hljs-number {
  color: rgb(126,83,5);
}

.emotion-0 .hljs-string {
  color: rgb(32,105,31);
}

.emotion-0 .hljs-meta .hljs-keyword {
  color: rgb(47,103,48);
}

.emotion-0.code-wrap {
  white-space: pre-wrap;
  word-break: break-all;
}

.emotion-0 mark {
  color: rgb(217,45,32);
  background-color: rgb(197,205,223);
  font-weight: 400;
  border-radius: 0.25rem;
  padding: 0.25rem;
}

.emotion-0.simple-one-line {
  min-height: 1.25rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0;
  padding-bottom: 0;
}

<div>
  <pre
    class=" emotion-0 emotion-1"
  >
    <code
      class="hljs"
    >
      <span
        class="hljs-string"
      >
        foo\\nbar
      </span>
    </code>
  </pre>
</div>
`;

exports[`should display edit functions 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-x: auto;
  padding: 1.5rem;
}

.emotion-0 code {
  color: rgb(51,53,60);
  background: rgb(252,252,253);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 400;
}

.emotion-0 code.hljs {
  padding: unset;
}

.emotion-0 .hljs-variable,
.emotion-0 .hljs-meta {
  color: rgb(51,53,60);
}

.emotion-0 .hljs-doctag,
.emotion-0 .hljs-title,
.emotion-0 .hljs-title.class_,
.emotion-0 .hljs-title.function_ {
  color: rgb(34,84,192);
}

.emotion-0 .hljs-comment {
  color: rgb(109,111,119);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-style: italic;
}

.emotion-0 .hljs-tag,
.emotion-0 .hljs-type,
.emotion-0 .hljs-keyword {
  color: rgb(152,29,150);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 700;
}

.emotion-0 .hljs-literal,
.emotion-0 .hljs-number {
  color: rgb(126,83,5);
}

.emotion-0 .hljs-string {
  color: rgb(32,105,31);
}

.emotion-0 .hljs-meta .hljs-keyword {
  color: rgb(47,103,48);
}

.emotion-0.code-wrap {
  white-space: pre-wrap;
  word-break: break-all;
}

.emotion-0 mark {
  color: rgb(217,45,32);
  background-color: rgb(197,205,223);
  font-weight: 400;
  border-radius: 0.25rem;
  padding: 0.25rem;
}

.emotion-0.simple-one-line {
  min-height: 1.25rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0;
  padding-bottom: 0;
}

.emotion-3 {
  box-sizing: border-box;
  border: none;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--color);
  background-color: var(--background);
  -webkit-transition: background-color 0.2s ease,outline 0.2s ease,color 0.2s ease;
  transition: background-color 0.2s ease,outline 0.2s ease,color 0.2s ease;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  height: 2.25rem;
  border-radius: 0.5rem;
  padding-left: 0.625rem;
  padding-right: 0.625rem;
  --background: transparent;
  --backgroundHover: rgb(232,235,255);
  --color: rgb(75,86,187);
  --colorHover: rgb(43,51,104);
  --focus: rgba(93,108,208,0.2);
}

.emotion-3:hover,
.emotion-3:focus,
.emotion-3:active {
  color: var(--colorHover);
  background-color: var(--backgroundHover);
}

.emotion-3:focus,
.emotion-3:active {
  outline: 4px solid var(--focus);
}

.emotion-3:disabled,
.emotion-3:disabled:hover {
  color: rgb(166,173,194);
  background-color: var(--background);
  cursor: not-allowed;
}

<div>
  <pre
    class=" emotion-0 emotion-1"
  >
    <code
      class="hljs sw-inline"
    >
      <span
        class="hljs-string"
      >
        One
      </span>
       
      <span
        class="hljs-string"
      >
        line
      </span>
       
      <span
        class="hljs-string"
      >
        command
      </span>
    </code>
    <button
      aria-label="edit"
      class="sw-ml-2 emotion-2 emotion-3 emotion-4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="16"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M11.013 1.427a1.75 1.75 0 0 1 2.474 0l1.086 1.086a1.75 1.75 0 0 1 0 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 0 1-.927-.928l.929-3.25c.081-.286.235-.547.445-.758l8.61-8.61Zm.176 4.823L9.75 4.81l-6.286 6.287a.253.253 0 0 0-.064.108l-.558 1.953 1.953-.558a.253.253 0 0 0 .108-.064Zm1.238-3.763a.25.25 0 0 0-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 0 0 0-.354Z"
        />
      </svg>
    </button>
  </pre>
</div>
`;

exports[`should handle multiple lines of code 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-x: auto;
  padding: 1.5rem;
}

.emotion-0 code {
  color: rgb(51,53,60);
  background: rgb(252,252,253);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 400;
}

.emotion-0 code.hljs {
  padding: unset;
}

.emotion-0 .hljs-variable,
.emotion-0 .hljs-meta {
  color: rgb(51,53,60);
}

.emotion-0 .hljs-doctag,
.emotion-0 .hljs-title,
.emotion-0 .hljs-title.class_,
.emotion-0 .hljs-title.function_ {
  color: rgb(34,84,192);
}

.emotion-0 .hljs-comment {
  color: rgb(109,111,119);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-style: italic;
}

.emotion-0 .hljs-tag,
.emotion-0 .hljs-type,
.emotion-0 .hljs-keyword {
  color: rgb(152,29,150);
  font-family: Ubuntu Mono,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: 700;
}

.emotion-0 .hljs-literal,
.emotion-0 .hljs-number {
  color: rgb(126,83,5);
}

.emotion-0 .hljs-string {
  color: rgb(32,105,31);
}

.emotion-0 .hljs-meta .hljs-keyword {
  color: rgb(47,103,48);
}

.emotion-0.code-wrap {
  white-space: pre-wrap;
  word-break: break-all;
}

.emotion-0 mark {
  color: rgb(217,45,32);
  background-color: rgb(197,205,223);
  font-weight: 400;
  border-radius: 0.25rem;
  padding: 0.25rem;
}

.emotion-0.simple-one-line {
  min-height: 1.25rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0;
  padding-bottom: 0;
}

<div>
  <pre
    class=" emotion-0 emotion-1"
  >
    <code
      class="hljs"
    >
      <span
        class="hljs-attr"
      >
        foo:
      </span>
       
      <span
        class="hljs-string"
      >
        bar
      </span>
      
              
      <span
        class="hljs-attr"
      >
        pleh:
      </span>
       
      <span
        class="hljs-string"
      >
        help
      </span>
      
              
      <span
        class="hljs-attr"
      >
        stuff:
      </span>
      
               
      <span
        class="hljs-attr"
      >
        foo:
      </span>
       
      <span
        class="hljs-string"
      >
        bar
      </span>
      
               
      <span
        class="hljs-attr"
      >
        bar:
      </span>
       
      <span
        class="hljs-string"
      >
        foo
      </span>
    </code>
  </pre>
</div>
`;
